@@ -100,6 +100,15 @@
 #
 #MAX_RECEIVE_CONNECTIONS	100
 
+# These variables can place limits on the number of connections an individual
+# host can have open to the SMTP server.  Connections can be limited by a
+# maximum total, or number allowed to be opened in a given time interval, in
+# seconds.  0 for either value indicated no limit.
+#
+#RECEIVE_CONNECTIONS_PER_HOST   	0
+#RECEIVE_CONNECTIONS_PER_INTERVAL   	0
+#RECEIVE_CONNECTION_INTERVAL_TIME	1
+
 # The maximum number of headers allowed on any incoming SMTP message.
 #
 #MAX_RECEIVED_HEADERS		100
